<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">SimpleReader</string>
	<string name="error">錯誤</string>
	<string name="error_dir_is_file">"SD卡中，/books"不是目錄，請檢查</string>
	<string name="error_dir_not_exist">"SD卡中，/books"目錄不存在，請創建</string>
	<string name="error_open_config_file">無法打開配置文件:</string>
	<string name="error_open_file">無法打開文件:</string>
	<string name="msg_file_opening">正在打開文件，請等待</string>
	<string name="error_write_config">無法保存配置文件</string>
	<string name="error_empty_file">文件為空</string>
	<string name="no_text_selected">未選中任何內容</string>

	<string name="menu_file">文件</string>
	<string name="menu_search">檢索</string>
	<string name="menu_option">設置</string>
	<string name="menu_lock_view">鎖屏</string>
	<string name="menu_unlock_view">解鎖</string>
	<string name="menu_exit">退出</string>
	<string name="menu_dict">檢索字典</string>
	<string name="menu_bookmark">標記書籤</string>
	<string name="menu_bookmark_mgr">書籤</string>
	<string name="menu_about">關於</string>
	<string name="menu_chapter">卷章</string>
	<string name="menu_status_panel">狀態欄</string>
	<string name="menu_seek">定位</string>

	<string name="dialog_option_title">配置選項</string>
	<string name="dialog_file_title">選擇書籍:</string>

	<string name="text_preview">揩面、汰腳、睏覺</string>
	<string name="text_preview_label">效果預覽：</string>
	<string name="font_size">字體大小：</string>
	<string name="color_mode">文字色模式：</string>
	<string name="color_mode_day">日光</string>
	<string name="color_mode_night">夜光</string>
	<string name="font_color_red">文字色(紅):</string>
	<string name="font_color_green">文字色(綠):</string>
	<string name="font_color_blue">文字色(藍):</string>
	<string name="font_bcolor_red">背景色(紅):</string>
	<string name="font_bcolor_green">背景色(綠):</string>
	<string name="font_bcolor_blue">背景色(藍):</string>
	<string name="custom_color_label">書籍設定顏色</string>
	<string name="strip_empty_line_label">隱藏空白行</string>
	<string name="view_style_label">閱讀方式：</string>
	<string name="han_style">直排</string>
	<string name="xi_style">横排</string>
	<string name="paging_direct_label">翻頁手勢：</string>
	<string name="gesture_up_label">向上</string>
	<string name="gesture_down_label">向下</string>
	<string name="gesture_left_label">向左</string>
	<string name="gesture_right_label">向右</string>
	<string name="gesture_click_up_label">點擊上部</string>
	<string name="gesture_click_down_label">點擊下部</string>
	<string name="gesture_click_left_label">點擊左部</string>
	<string name="gesture_click_right_label">點擊右部</string>
	<string name="zip_encode_label">zip文件名編碼：</string>
	<string name="button_ok_text">確定</string>
	<string name="button_cancel_text">取消</string>
	<string name="button_toc_text">章節</string>
	<string name="button_bookmark_text">書籤</string>
	<string name="button_search_text">檢索</string>
	<string name="view_direct_label">閱讀方嚮：</string>
	<string name="dict_enabled_label">啓用字典：</string>
	<string name="online_enabled_label">線上閱讀</string>
	<string name="dict_list_title">選詞</string>
	<string name="bookmark_title">標記書籤:</string>
	<string name="button_bookmark_delete_title">刪除書籤</string>
	<string name="recently_opened_title">最近閱讀</string>
	<string name="file_list_title">書籍列表</string>
	<string name="file_online_list_title">線上書籍</string>
	<string name="font_name_label">選擇字體：</string>
	<string name="default_font_label">缺省字體</string>

	<string name="pos_label">位置：</string>
	<string name="button_switch_orient_label">切換方向</string>
	<string name="button_switch_bright_label">切換顔色</string>
	<string name="button_settings_label">設置</string>
	<string name="button_prev_pos_label">←</string>
	<string name="button_next_pos_label">→</string>

	<string name="loading">加載中...</string>
	<string name="about_title">關於</string>

	<string name="file_not_supported">文件格式不支持，無法打開。</string>

	<string name="menu_copy">複制選中行</string>
	<string name="button_copy_text">複制</string>
</resources>
