<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical" android:layout_width="fill_parent"
              android:layout_height="fill_parent" android:background="@android:color/white">
    <ScrollView android:id="@+id/opt_scroll_view" android:layout_width="fill_parent"
                android:layout_height="wrap_content" android:paddingTop="12dip" android:layout_weight="1">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent"
                      android:layout_height="wrap_content">
            <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content"
                          android:paddingBottom="4dip" android:paddingLeft="12dip"
                          android:paddingRight="12dip" android:orientation="horizontal">
                <TextView android:layout_height="wrap_content" android:layout_width="wrap_content"
                          android:text="@string/text_preview_label" android:textSize="24dip"
                          android:textColor="@android:color/black"/>
                <TextView android:id="@+id/text_preview" android:layout_height="wrap_content"
                          android:layout_width="fill_parent" android:text="@string/text_preview"
                          android:textSize="24dip" android:layout_marginLeft="20px"
                          android:textColor="@android:color/black"/>
            </LinearLayout>
            <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content"
                          android:paddingBottom="4dip" android:paddingLeft="12dip"
                          android:paddingRight="12dip" android:orientation="horizontal">
                <TextView android:layout_height="wrap_content" android:layout_width="wrap_content"
                          android:text="@string/font_name_label" android:textSize="24dip"
                          android:textColor="@android:color/black"/>
                <Spinner android:id="@+id/font_name" android:layout_height="wrap_content"
                         android:layout_width="wrap_content"
                         android:background="@android:color/white"/>
            </LinearLayout>
            <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content"
                          android:paddingBottom="4dip" android:paddingLeft="12dip"
                          android:paddingRight="12dip" android:orientation="horizontal">
                <TextView android:layout_height="wrap_content" android:layout_width="wrap_content"
                          android:text="@string/font_size" android:textSize="24dip"
                          android:textColor="@android:color/black"/>
                <Spinner android:id="@+id/font_size" android:layout_height="wrap_content"
                         android:layout_width="wrap_content"/>
            </LinearLayout>
            <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content"
                          android:paddingBottom="4dip" android:paddingLeft="12dip"
                          android:paddingRight="12dip" android:orientation="horizontal">
                <TextView android:layout_height="wrap_content" android:layout_width="wrap_content"
                          android:text="@string/color_mode" android:textSize="24dip"
                          android:textColor="@android:color/black"/>
                <Spinner android:id="@+id/color_mode" android:layout_height="wrap_content"
                         android:layout_width="wrap_content"/>
            </LinearLayout>
            <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content"
                          android:paddingBottom="4dip" android:paddingLeft="12dip"
                          android:paddingRight="12dip" android:orientation="horizontal">
                <TextView android:layout_height="wrap_content"
                          android:layout_width="wrap_content"
                          android:text="@string/font_color_red" android:textSize="24dip"
                          android:textColor="@android:color/black"/>
                <TextView android:id="@+id/font_color_red_value" android:text="100"
                          android:layout_height="wrap_content"
                          android:layout_width="wrap_content" android:textSize="24dip"
                          android:textColor="@android:color/black"/>
                <SeekBar android:id="@+id/font_color_red" android:max="255"
                         android:layout_height="wrap_content" android:layout_width="fill_parent"
                         android:layout_marginLeft="20px"/>
            </LinearLayout>
            <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content"
                          android:paddingBottom="4dip" android:paddingLeft="12dip"
                          android:paddingRight="12dip" android:orientation="horizontal">
                <TextView android:layout_height="wrap_content"
                          android:layout_width="wrap_content"
                          android:text="@string/font_color_green" android:textSize="24dip"
                          android:textColor="@android:color/black"/>
                <TextView android:id="@+id/font_color_green_value" android:text="100"
                          android:layout_height="wrap_content"
                          android:layout_width="wrap_content" android:textSize="24dip"
                          android:textColor="@android:color/black"/>
                <SeekBar android:id="@+id/font_color_green" android:max="255"
                         android:layout_height="wrap_content" android:layout_width="fill_parent"
                         android:layout_marginLeft="20px"/>
            </LinearLayout>
            <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content"
                          android:paddingBottom="4dip" android:paddingLeft="12dip"
                          android:paddingRight="12dip" android:orientation="horizontal">
                <TextView android:layout_height="wrap_content"
                          android:layout_width="wrap_content"
                          android:text="@string/font_color_blue" android:textSize="24dip"
                          android:textColor="@android:color/black"/>
                <TextView android:id="@+id/font_color_blue_value" android:text="100"
                          android:layout_height="wrap_content"
                          android:layout_width="wrap_content" android:textSize="24dip"
                          android:textColor="@android:color/black"/>
                <SeekBar android:id="@+id/font_color_blue" android:max="255"
                         android:layout_height="wrap_content" android:layout_width="fill_parent"
                         android:layout_marginLeft="20px"/>
            </LinearLayout>
            <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content"
                          android:paddingBottom="4dip" android:paddingLeft="12dip"
                          android:paddingRight="12dip" android:orientation="horizontal">
                <TextView android:layout_height="wrap_content"
                          android:layout_width="wrap_content"
                          android:text="@string/font_bcolor_red" android:textSize="24dip"
                          android:textColor="@android:color/black"/>
                <TextView android:id="@+id/font_bcolor_red_value" android:text="100"
                          android:layout_height="wrap_content"
                          android:layout_width="wrap_content" android:textSize="24dip"
                          android:textColor="@android:color/black"/>
                <SeekBar android:id="@+id/font_bcolor_red" android:max="255"
                         android:layout_height="wrap_content" android:layout_width="fill_parent"
                         android:layout_marginLeft="20px"/>
            </LinearLayout>
            <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content"
                          android:paddingBottom="4dip" android:paddingLeft="12dip"
                          android:paddingRight="12dip" android:orientation="horizontal">
                <TextView android:layout_height="wrap_content"
                          android:layout_width="wrap_content"
                          android:text="@string/font_bcolor_green" android:textSize="24dip"
                          android:textColor="@android:color/black"/>
                <TextView android:id="@+id/font_bcolor_green_value" android:text="100"
                          android:layout_height="wrap_content"
                          android:layout_width="wrap_content" android:textSize="24dip"
                          android:textColor="@android:color/black"/>
                <SeekBar android:id="@+id/font_bcolor_green" android:max="255"
                         android:layout_height="wrap_content" android:layout_width="fill_parent"
                         android:layout_marginLeft="20px"/>
            </LinearLayout>
            <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content"
                          android:paddingBottom="4dip" android:paddingLeft="12dip"
                          android:paddingRight="12dip" android:orientation="horizontal">
                <TextView android:layout_height="wrap_content"
                          android:layout_width="wrap_content"
                          android:text="@string/font_bcolor_blue" android:textSize="24dip"
                          android:textColor="@android:color/black"/>
                <TextView android:id="@+id/font_bcolor_blue_value" android:text="100"
                          android:layout_height="wrap_content"
                          android:layout_width="wrap_content" android:textSize="24dip"
                          android:textColor="@android:color/black"/>
                <SeekBar android:id="@+id/font_bcolor_blue" android:max="255"
                         android:layout_height="wrap_content" android:layout_width="fill_parent"
                         android:layout_marginLeft="20px"/>
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:paddingBottom="4dip"
                          android:paddingLeft="12dip" android:paddingRight="12dip"
                          android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:layout_height="wrap_content" android:layout_width="wrap_content"
                          android:text="@string/view_style_label" android:textSize="24dip"
                          android:textColor="@android:color/black"/>
                <RadioGroup android:id="@+id/view_style" android:orientation="horizontal"
                            android:layout_width="wrap_content" android:layout_height="wrap_content">
                    <RadioButton android:id="@+id/han_style"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="@string/han_style"/>
                    <RadioButton android:id="@+id/xi_style"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="@string/xi_style"/>
                </RadioGroup>
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:paddingBottom="4dip"
                          android:paddingLeft="12dip" android:paddingRight="12dip"
                          android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:layout_height="wrap_content" android:layout_width="wrap_content"
                          android:text="@string/paging_direct_label" android:textSize="24dip"
                          android:textColor="@android:color/black"/>
                <Spinner android:id="@+id/paging_direct" android:orientation="horizontal"
                         android:layout_height="wrap_content" android:layout_width="wrap_content"/>
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:paddingBottom="4dip"
                          android:paddingLeft="12dip" android:paddingRight="12dip"
                          android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:layout_height="wrap_content" android:layout_width="wrap_content"
                          android:text="@string/zip_encode_label" android:textSize="24dip"
                          android:textColor="@android:color/black"/>
                <Spinner android:id="@+id/zip_encode" android:orientation="horizontal"
                         android:layout_height="wrap_content" android:layout_width="wrap_content"/>
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:paddingBottom="4dip"
                          android:paddingLeft="12dip" android:paddingRight="12dip"
                          android:layout_width="fill_parent" android:layout_height="wrap_content">
                <CheckBox android:id="@+id/dict_enabled"
                          android:layout_height="wrap_content" android:layout_width="wrap_content"
                          android:text="@string/dict_enabled_label" android:textSize="24dip"
                          android:textColor="@android:color/black"/>
                <Spinner android:id="@+id/dict_file" android:orientation="horizontal"
                         android:layout_height="wrap_content" android:layout_width="wrap_content"/>
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:paddingBottom="4dip"
                          android:paddingLeft="12dip" android:paddingRight="12dip"
                          android:layout_width="fill_parent" android:layout_height="wrap_content"
                          android:visibility="gone">
                <CheckBox android:id="@+id/online_enabled"
                          android:layout_height="wrap_content" android:layout_width="wrap_content"
                          android:text="@string/online_enabled_label" android:textSize="24dip"
                          android:textColor="@android:color/black"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <LinearLayout style="@android:style/ButtonBar" android:orientation="horizontal"
                  android:layout_width="fill_parent" android:layout_height="wrap_content"
                  android:background="@android:color/white">
        <Button android:id="@+id/button_ok" android:text="@string/button_ok_text"
                android:layout_width="0dip" android:layout_height="wrap_content"
                android:layout_weight="1"/>
        <Button android:id="@+id/button_cancel" android:text="@string/button_cancel_text"
                android:layout_width="0dip" android:layout_height="wrap_content"
                android:layout_weight="1"/>
    </LinearLayout>
</LinearLayout>